--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mongoose": "^5.3.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4"
   }
